Deprecating the TransferApplicationTest class as that is not a unit test. Fixed use of NatsJetstreamMessageClient in TransferAPIVertical and removed all uses of RemoteDataClient as this is simply not needed. Fixed exception messaging for src and dest URI parsing in the TransferTaskCreatedListener#processEvent() method. Updated logback config and added jul logging LevelChangePropagator to ensure jul logging is picked up and handled by logback. Removed unused cloudevent and slugify maven dependencies. Added jul-to-slf4j and log4j-over-slf4j. Removed Redis and BeanstalkdClient containers from third-party compose file as they are not used.